--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oi-wiki",
+  "name": "eda-wiki",
   "version": "1.0.0",
-  "description": "wiki for OI / ACM-ICPC",
+  "description": "wiki for open EDA",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/24OI/OI-wiki.git"
+    "url": "git+https://github.com/daitoto/EDA-wiki.git"
   },
   "keywords": [
     "OI",
@@ -21,9 +21,9 @@
   "author": "OI Wiki Team",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/24OI/OI-wiki/issues"
+    "url": "https://github.com/daitoto/EDA-wiki/issues"
   },
-  "homepage": "https://github.com/24OI/OI-wiki#readme",
+  "homepage": "https://github.com/daitoto/EDA-wiki#readme",
   "dependencies": {
     "cssnano": "^4.1.10",
     "gulp": "^4.0.0",
