Add many more categories

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,21 +24,44 @@ nav:
     - EDA课程与教程: intro/course.md
     - 开源EDA研讨会: intro/workshop.md
     - 致谢: intro/thanks.md
+
+  - 设计流程:
+    - 设计流程简介: flow/index.md
+    - ASIC流程: flow/asic.md
+    - FPGA流程: flow/fpga.md
+    - 标准格式: flow/standard.md
+    - DSL与IR: flow/dsl.md
+
   - 设计综合:
     - 设计综合简介: synthesis/index.md
     - 高层综合: synthesis/behavior.md
-    - DSL与IR: synthesis/dsl.md
     - 逻辑综合: synthesis/logic.md
+    - 布局布线: synthesis/par.md
+    - 版图综合: synthesis/layout.md
 
   - 测试与验证:
     - 测试与验证简介: verification/index.md
+    - 测试: verification/testing.md
+    - 形式化验证: verification/formal.md
+    - LVS: verification/lvs.md
 
   - 分析与建模:
     - 分析与建模简介: analysis/index.md
+    - 逻辑仿真: analysis/logic.md
+    - 时序分析: analysis/timing.md
+    - 电路分析: analysis/circuit.md
+    - 物理分析: analysis/physics.md
 
   - 硅知产:
     - 硅知产简介: sip/index.md
-
+    - PDK与单元库: sip/pdk.md
+    - 存储单元: sip/mem.md
+    - 通用计算: sip/general.md
+    - 专用计算: sip/special.md
+    - 可重构计算: sip/reconfig.md
+    - 片上互连: sip/interconn.md
+    - 输入输出: sip/inout.md
+    - 传感器: sip/sensor.md
 
 # Theme
 theme:
