--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ nav:
     - 设计综合简介: synthesis/index.md
     - 高层综合: synthesis/behavior.md
     - 逻辑综合: synthesis/logic.md
-    - 布局布线: synthesis/par.md
+    - 布局布线: synthesis/pnr.md
     - 版图综合: synthesis/layout.md
 
   - 测试与验证:
