--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
     - 形式化验证: verification/formal.md
     - DRC: verification/drc.md
     - LVS: verification/lvs.md
+    - IR: verification/ir.md
 
   - 分析与建模:
     - 分析与建模简介: analysis/index.md
