Add a few more tools

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ repo_url: 'https://github.com/pkuzjx/EDA-wiki'
 edit_uri: 'blob/master/docs/'
 
 # Copyright
-copyright: 'ICP备案号：<a href="http://www.beian.gov.cn">京ICP备19041147号</a> <br> Copyright &copy; 2019 - 2019 EDA Wiki Team'
+copyright: 'ICP备案号：<a href="http://www.beian.gov.cn">京ICP备19041147号</a> <br> Copyright &copy; 2019 - 2020 EDA Wiki Team'
 google_analytics:
   - ''
   - 'auto'
@@ -37,7 +37,9 @@ nav:
     - 高层综合: synthesis/behavior.md
     - 逻辑综合: synthesis/logic.md
     - 布局布线: synthesis/pnr.md
+    - 时钟综合: synthesis/clock.md
     - 电网综合: synthesis/power.md
+    - 物理优化: synthesis/opt.md
     - 版图综合: synthesis/layout.md
 
   - 测试:
