--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,8 +49,7 @@ nav:
   - 验证:
     - 验证简介: verification/index.md
     - 形式化验证: verification/formal.md
-    - DRC: verification/drc.md
-    - LVS: verification/lvs.md
+    - 物理验证: verification/physical.md
 
   - 分析与建模:
     - 分析与建模简介: analysis/index.md
