Add the DFT category

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,8 @@ nav:
 
   - 测试:
     - 测试简介: testing/index.md
-    - 测试: testing/testing.md
+    - 可测试性设计: testing/dft.md
+    - 自动测试: testing/testing.md
 
   - 验证:
     - 验证简介: verification/index.md
